--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="password-status"></div>
         <div class="inputPassword">
           <span><i class="fa-solid fa-lock"></i></span>
-          <input type="password" class="check-password" placeholder=" password" />
+          <input type="password" class="check-password" placeholder="Re-type password" />
         </div> 
          <div class="password-status-check"></div>
       </div>
